[gd_scene load_steps=3 format=3 uid="uid://c5if44yln1p3k"]

[ext_resource type="Script" path="res://modules/remi/mob_handy_man/mob_handy_man.gd" id="1_x8ph7"]
[ext_resource type="Texture2D" uid="uid://dnsmnj01rqb7r" path="res://modules/aurelie/assets/graphics/chamallow_corps_normal.svg" id="2_2l4ra"]

[node name="MobHandyMan" type="Node2D"]
script = ExtResource("1_x8ph7")

[node name="Body" type="Node2D" parent="."]

[node name="Sprite2DNormal" type="Sprite2D" parent="Body"]
texture = ExtResource("2_2l4ra")

[node name="Hands" type="Node2D" parent="."]

[node name="Hand" type="Node2D" parent="Hands"]
position = Vector2(-55, 0)

[node name="TextureButtonOpen" type="TextureButton" parent="Hands/Hand"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Polygon2D" type="Polygon2D" parent="Hands/Hand/TextureButtonOpen"]
position = Vector2(26, 23)
polygon = PackedVector2Array(7, 29, -26, 23, -48, -31, 25, -34, 25, 5)

[node name="TextureButtonClosed" type="TextureButton" parent="Hands/Hand"]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="Polygon2D" type="Polygon2D" parent="Hands/Hand/TextureButtonClosed"]
position = Vector2(26, 23)
polygon = PackedVector2Array(7, 29, -26, 23, -48, -31, 25, -34, 25, 5)

[node name="TextureButtonAttacking" type="TextureButton" parent="Hands/Hand"]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="Polygon2D" type="Polygon2D" parent="Hands/Hand/TextureButtonAttacking"]
position = Vector2(26, 23)
polygon = PackedVector2Array(7, 29, -26, 23, -48, -31, 25, -34, 25, 5)

[node name="Hand2" type="Node2D" parent="Hands"]
position = Vector2(-55, 0)

[node name="TextureButtonOpen" type="TextureButton" parent="Hands/Hand2"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Polygon2D" type="Polygon2D" parent="Hands/Hand2/TextureButtonOpen"]
position = Vector2(26, 23)
polygon = PackedVector2Array(7, 29, -26, 23, -48, -31, 25, -34, 25, 5)

[node name="TextureButtonClosed" type="TextureButton" parent="Hands/Hand2"]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="Polygon2D" type="Polygon2D" parent="Hands/Hand2/TextureButtonClosed"]
position = Vector2(26, 23)
polygon = PackedVector2Array(7, 29, -26, 23, -48, -31, 25, -34, 25, 5)

[node name="TextureButtonAttacking" type="TextureButton" parent="Hands/Hand2"]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="Polygon2D" type="Polygon2D" parent="Hands/Hand2/TextureButtonAttacking"]
position = Vector2(26, 23)
polygon = PackedVector2Array(7, 29, -26, 23, -48, -31, 25, -34, 25, 5)

[node name="Hand3" type="Node2D" parent="Hands"]
position = Vector2(-55, 0)

[node name="TextureButtonOpen" type="TextureButton" parent="Hands/Hand3"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Polygon2D" type="Polygon2D" parent="Hands/Hand3/TextureButtonOpen"]
position = Vector2(26, 23)
polygon = PackedVector2Array(7, 29, -26, 23, -48, -31, 25, -34, 25, 5)

[node name="TextureButtonClosed" type="TextureButton" parent="Hands/Hand3"]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="Polygon2D" type="Polygon2D" parent="Hands/Hand3/TextureButtonClosed"]
position = Vector2(26, 23)
polygon = PackedVector2Array(7, 29, -26, 23, -48, -31, 25, -34, 25, 5)

[node name="TextureButtonAttacking" type="TextureButton" parent="Hands/Hand3"]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="Polygon2D" type="Polygon2D" parent="Hands/Hand3/TextureButtonAttacking"]
position = Vector2(26, 23)
polygon = PackedVector2Array(7, 29, -26, 23, -48, -31, 25, -34, 25, 5)
